crates/aven-check/tests/fixtures/check/valid/value-keywords.av
b : Bool = true
f : Bool = false
u : Undefined = undefined
n : Null = null
e : ?Text = undefined
e2 : Text? = null
