crates/aven-check/tests/fixtures/check/invalid/null-undefined-distinct.av
u : Undefined = null
n : Null = undefined
e : Text? = null
